cuda_ops_test/gen_bang_results/22_Tanh-output.txt
warning: CUDA version 12.1 is only partially supported
./cuda_ops/22_Tanh.cu:31:22: error: 'tanh_vec4' does not name a template but is followed by template arguments
   31 |         output4[i] = tanh_vec4<float>(in4);
      |                      ^        ~~~~~~~
./cuda_ops/22_Tanh.cu:6:35: note: non-template declaration found by name lookup
    6 | __device__ __forceinline__ float4 tanh_vec4(float4 val) {
      |                                   ^
